# openclaw-photo-studio

./: .gitignore  ADR.md  CHANGELOG.md  COMMERCIAL.md  COMPATIBILITY.md  CONCEPT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md  ROADMAP.md  SHORTCUTS.md  TESTING.md
.github/workflows/: build.yml
app/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs  perf.rs  render.rs
app/src/components/common/: CommandPalette.tsx  Histogram.tsx  ShortcutReference.tsx  Toast.tsx
app/src/components/develop/: BrushTool.tsx  SecondaryView.tsx
app/src/components/diagnostics/: DiagnosticsView.tsx
app/src/components/export/: BatchExportDialog.tsx
app/src/components/layout/: AppShell.tsx  Filmstrip.tsx  LeftSidebar.tsx  MainView.tsx  RightSidebar.tsx  TopBar.tsx
app/src/components/map/: MapView.tsx
app/src/components/plugins/: PluginManager.tsx
app/src/components/print/: PrintView.tsx
app/src/components/settings/: PreferencesPanel.tsx  ShortcutEditor.tsx
app/src/components/tethering/: TetheringPanel.tsx
app/src/components/welcome/: WelcomeScreen.tsx
app/src/lib/: appState.ts  preferences.ts  secondMonitor.ts  shortcuts.ts  vimMode.ts
app/src/lib/__tests__/: vimMode.test.ts
app/src/stores/: develop.ts
app/src/styles/: global.css
crates/ocps-catalog/: Cargo.toml
crates/ocps-catalog/src/: db.rs  edge_case_tests.rs  geo.rs  lib.rs  lightroom_import.rs  metadata_template.rs  models.rs  search.rs
crates/ocps-catalog/src/migrations/: 0002_add_iptc.sql
crates/ocps-cli/: Cargo.toml
crates/ocps-cli/src/: main.rs  main.rs.bak
crates/ocps-cli/tests/: integration_tests.rs
crates/ocps-core/: Cargo.toml
crates/ocps-core/benches/: pipeline_bench.rs
crates/ocps-core/examples/: process_image.rs
crates/ocps-core/src/: histogram.rs  lib.rs  preview_cache.rs  thumbnail_service.rs
crates/ocps-core/src/edit/: mod.rs
crates/ocps-core/src/gpu/: context.rs  full_pipeline.rs  mod.rs  pipeline.rs
crates/ocps-core/src/gpu/shaders/: color.wgsl  combine.wgsl  exposure.wgsl  tone.wgsl
crates/ocps-core/src/hdr/: mod.rs
crates/ocps-core/src/panorama/: mod.rs
crates/ocps-core/src/pipeline/: README.md  color.rs  edge_case_tests.rs  lens.rs  local_adj.rs  mod.rs  process.rs  types.rs
crates/ocps-core/src/presets/: mod.rs
crates/ocps-core/src/raw/: camera_profiles.rs  demosaic.rs  mod.rs  thumbnail.rs
crates/ocps-core/tests/: integration_pipeline.rs
crates/ocps-export/: Cargo.toml
crates/ocps-export/src/: color.rs  contact_sheet.rs  dng.rs  edge_case_tests.rs  jpeg.rs  lib.rs  naming.rs  png.rs  queue.rs  resize.rs  watermark.rs
crates/ocps-plugin-host/: Cargo.toml
crates/ocps-plugin-host/src/: ai_denoise.rs  api.rs  face_detect.rs  gphoto_provider.rs  host.rs  lib.rs  manifest.rs  marketplace.rs  registry.rs  sdk.rs  sdk.rs.bak  tether.rs
crates/ocps-xmp/: Cargo.toml
crates/ocps-xmp/src/: edge_case_tests.rs  exif.rs  lib.rs  lr_preset.rs  reader.rs  writer.rs
docs/: architecture.md  build-guide.md  plugin-guide.md  user-guide.md
docs/benchmarks/: 2026-03-19.txt
docs/concept/: COPY-PASTE-SPEC.md  DATA-MODELS.md  EXECUTIVE-SUMMARY.md  MASTER-PROMPT.md
docs/implementation/: PHASE1-DAY71-90-SUMMARY.md
docs/tasks/: task-v0.4.0.txt  task-v0.5.0.txt  task-v0.6.0.txt  task-v0.7.0.txt  task-v0.8.0.txt  task-v0.9.0.txt
plugins/example-lut-plugin/: README.md  plugin.toml  plugin.wat
repo-files/: CODE_OF_CONDUCT.md  GOVERNANCE.md  LICENSE-CHOICE.md  README.md  SECURITY.md
tests/: Cargo.toml
tests/fixtures/: README.md  sample.xmp
tests/integration/: test_full_workflow.rs
