[workspace]
members = [
    "app/src-tauri",
    "crates/ocps-core",
    "crates/ocps-catalog",
    "crates/ocps-xmp",
    "crates/ocps-export",
    "crates/ocps-plugin-host",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
