[workspace]
members = [
    "app/src-tauri",
    "crates/ocps-core",
    "crates/ocps-catalog",
    "crates/ocps-xmp",
    "crates/ocps-export",
    "crates/ocps-plugin-host",
    "crates/ocps-cli",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
authors = ["Quantum Nic <quantumnic@users.noreply.github.com>"]
license = "PolyForm-Noncommercial-1.0.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
rawloader = "0.37"
image = "0.25"
rayon = "1"
byteorder = "1"
half = "2"
