[package]
name = "integration-tests"
version = "0.2.0"
edition = "2021"
publish = false

[[test]]
name = "full_workflow"
path = "integration/test_full_workflow.rs"

[dependencies]
ocps-catalog = { path = "../crates/ocps-catalog" }
ocps-xmp = { path = "../crates/ocps-xmp" }
tempfile = "3"
serde_json = "1"

[dev-dependencies]
