[package]
name = "ocps-cli"
version = "0.9.0"
edition = "2021"
authors = ["Quantum Nic <quantumnic@users.noreply.github.com>"]
license = "PolyForm-Noncommercial-1.0.0"

[[bin]]
name = "ocps"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ocps-catalog = { path = "../ocps-catalog" }
ocps-core = { path = "../ocps-core" }
ocps-xmp = { path = "../ocps-xmp" }
ocps-export = { path = "../ocps-export" }

[dev-dependencies]
tempfile = "3"
