[package]
name = "ocps-core"
version = "0.1.0"
edition = "2021"
description = "OpenClaw Photo Studio — Core Engine (RAW decode, GPU pipeline, image processing)"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rawloader = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
byteorder = { workspace = true }
half = { workspace = true }
