[package]
name = "ocps-core"
version = "0.2.0"
edition = "2021"
description = "OpenClaw Photo Studio — Core Engine (RAW decode, GPU pipeline, image processing)"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rawloader = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
byteorder = { workspace = true }
half = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline_bench"
harness = false
