[package]
name = "ocps-export"
version = "0.2.0"
edition = "2021"
description = "OpenClaw Photo Studio — Export engine (JPEG, TIFF, PNG, WebP, DNG)"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }

[dev-dependencies]
tempfile = "3"
