[package]
name = "ocps-xmp"
version = "0.9.0"
edition = "2021"
description = "OpenClaw Photo Studio — XMP/IPTC/EXIF metadata engine"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
quick-xml = "0.36"
base64 = "0.22"
kamadak-exif = "0.5"

[dev-dependencies]
tempfile = "3"
